# app-sui

./: .gitignore  CONTRIBUTING.md  README.md  crate-hashes.json  default.nix  ledger_app.toml  run-docker-build.sh  run-ragger-tests.sh
.cargo/: config
.github/workflows/: build_and_functional_tests.yml  coding_style_checks.yml
dep/alamgu/: github.json
dep/ledger-nanos-sdk/: github.json
dep/ledger-secure-sdk-nanos/: github.json
dep/ledger-secure-sdk-nanosplus/: github.json
dep/ledger_secure_sdk_sys-bindings/: github.json
docker/: run-build-in-docker.sh
docs/: apdu.md
ragger-tests/: requirements.txt  test_app_mainmenu.py  test_pubkey_cmd.py  test_sign_cmd.py  test_version_cmd.py  utils.py
ragger-tests/application_client/: client.py
rust-app/: Cargo.toml  build.rs
rust-app/bin-src/: main.rs
rust-app/src/: ctx.rs  handle_apdu.rs  implementation.rs  interface.rs  lib.rs  main_nanos.rs  main_stax.rs  menu.rs  run_mode.rs  settings.rs  swap.rs  test_parsers.rs  ui.rs  utils.rs
rust-app/src/swap/: get_params.rs  mod.rs  panic_handler.rs  params.rs
rust-app/src/ui/: nano.rs  nbgl.rs
ts-tests/: package.json
