[package]
name = "alamgu-example"
version = "0.0.1"
authors = ["jonored", "yhql"]
edition = "2018"
autobins = false
resolver = "2"

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
ledger-crypto-helpers = { git = "https://github.com/alamgu/ledger-crypto-helpers" }
ledger-log = { git = "https://github.com/alamgu/ledger-log" }
ledger-parser-combinators = { git = "https://github.com/alamgu/ledger-parser-combinators" }
zeroize = { version = "1.5.2", default-features = false }
num_enum = { version = "0.5", default-features = false }
include_gif = "1.0.1"

# Pass --features speculos,ledger-log/log_info (or log_trace, etc) to enable
# speculos logging and change log level.
[features]
default = [ ]
# Pass --features speculos,ledger-log/log_info (or log_trace, etc) to enable speculos logging and change log level.
speculos = [ "ledger_device_sdk/speculos", "ledger-log/speculos", "ledger-log/log_error", "ledger-parser-combinators/logging" ]
extra_debug = ["ledger-log/log_trace"]

[target.'cfg(target_family = "bolos")'.dependencies]
ledger_device_sdk = "1.19.1"
ledger_secure_sdk_sys = "1.6.1"

[target.'cfg(any(target_os = "nanosplus", target_os = "nanox"))'.dependencies]
ledger-prompts-ui = { git = "https://github.com/alamgu/ledger-prompts-ui" }

[target.'cfg(target_family = "bolos")'.dev-dependencies.ledger_device_sdk]
version = "1.19.1"
features = [ "speculos" ]

[[bin]]
name = "alamgu-example"
test = false
path = "bin-src/main.rs"

[profile.dev]
# We need this to ensure stack usage is minimal even on speculos
opt-level = 3
# This is needed to avoid this error while doing 'cargo stack-sizes'
#    error: undefined symbol: core::panicking::panic::
overflow-checks = false
[profile.release]
opt-level = 3
overflow-checks = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("nanos", "flex", "stax"))'] }

[package.metadata.ledger]
name = "Alamgu Example"
path = ["44'/535348'"]
curve = ["ed25519"]
flags = "0"

[package.metadata.ledger.nanox]
icon = "crab-small.gif"

[package.metadata.ledger.nanosplus]
icon = "crab-small.gif"

[package.metadata.ledger.stax]
icon = "crab_32x32.gif"

[package.metadata.ledger.flex]
icon = "crab_40x40.gif"